// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExplorerFaucetSettings.vue SHould display inactive faucet UI 1`] = `
<div class="container container--fluid">
  <div class="row">
    <div class="col col-6">
      <div class="my-6 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <!---->
          <!---->
          <div class="v-input mt-1 theme--light v-input--selection-controls v-input--switch v-input--switch--inset">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><input aria-checked="false" id="input-40" role="switch" type="checkbox" aria-disabled="false" value="">
                  <div class="v-input--selection-controls__ripple"></div>
                  <div class="v-input--switch__track theme--light"></div>
                  <div class="v-input--switch__thumb theme--light">
                    <transition-stub name="fab-transition" mode="out-in"></transition-stub>
                  </div>
                </div><label for="input-40" class="v-label theme--light" style="left: 0px; position: relative;">Inactive</label>
              </div>
              <div class="v-messages theme--light">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div> <strong>URL:</strong> <a href="//ethernal.com/faucet" target="_blank">https://ethernal.com/faucet</a><br> <strong>Address:</strong>
          <hash-link-stub fullhash="true" hash="0x4150e51980114468aa8309bb72f027d8bff41353" type="address"></hash-link-stub><br> <strong>Balance:</strong>&nbsp;
          0.09 ETL
          <hr role="separator" aria-orientation="horizontal" class="mt-4 mb-6 v-divider theme--light">
          <form novalidate="novalidate" class="v-form">
            <div class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <fieldset aria-hidden="true">
                    <legend style="width: 0px;"><span class="notranslate">​</span></legend>
                  </fieldset>
                  <div class="v-text-field__slot"><label for="input-47" class="v-label v-label--active v-label--is-disabled theme--light" style="left: 0px; position: absolute;">Drip Amount</label><input required="required" disabled="disabled" id="input-47" type="number">
                    <div class="v-text-field__suffix">ETL</div>
                  </div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper">
                      <div class="v-messages__message">Amount to send for each request</div>
                    </transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
            <div class="v-input mt-2 v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <fieldset aria-hidden="true">
                    <legend style="width: 0px;"><span class="notranslate">​</span></legend>
                  </fieldset>
                  <div class="v-text-field__slot"><label for="input-50" class="v-label v-label--active v-label--is-disabled theme--light" style="left: 0px; position: absolute;">Interval Between Drips</label><input required="required" disabled="disabled" id="input-50" type="number">
                    <div class="v-text-field__suffix">hours</div>
                  </div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper">
                      <div class="v-messages__message">Minimum time between requests for each address</div>
                    </transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
            <div class="v-card__actions pr-0 pb-0">
              <div class="spacer"></div> <button type="submit" disabled="disabled" class="v-btn v-btn--disabled v-btn--has-bg theme--light v-size--default"><span class="v-btn__content">Update</span></button>
            </div>
          </form>
        </div>
      </div>
      <h4 class="error--text">Danger Zone</h4>
      <explorer-faucet-settings-danger-zone-stub faucetid="1"></explorer-faucet-settings-danger-zone-stub>
    </div>
  </div>
</div>
`;

exports[`ExplorerFaucetSettings.vue Should display active faucet UI 1`] = `
<div class="container container--fluid">
  <div class="row">
    <div class="col col-6">
      <div class="my-6 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <!---->
          <!---->
          <div class="v-input mt-1 v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--switch v-input--switch--inset primary--text">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><input aria-checked="true" id="input-18" role="switch" type="checkbox" aria-disabled="false" value="">
                  <div class="v-input--selection-controls__ripple primary--text"></div>
                  <div class="v-input--switch__track theme--light primary--text"></div>
                  <div class="v-input--switch__thumb theme--light primary--text">
                    <transition-stub name="fab-transition" mode="out-in"></transition-stub>
                  </div>
                </div><label for="input-18" class="v-label theme--light" style="left: 0px; position: relative;">Active</label>
              </div>
              <div class="v-messages theme--light primary--text">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div> <strong>URL:</strong> <a href="//ethernal.com/faucet" target="_blank">https://ethernal.com/faucet</a><br> <strong>Address:</strong>
          <hash-link-stub fullhash="true" hash="0x4150e51980114468aa8309bb72f027d8bff41353" type="address"></hash-link-stub><br> <strong>Balance:</strong>&nbsp;
          0.09 ETL
          <hr role="separator" aria-orientation="horizontal" class="mt-4 mb-6 v-divider theme--light">
          <form novalidate="novalidate" class="v-form">
            <div class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <fieldset aria-hidden="true">
                    <legend style="width: 0px;"><span class="notranslate">​</span></legend>
                  </fieldset>
                  <div class="v-text-field__slot"><label for="input-25" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Drip Amount</label><input required="required" id="input-25" type="number">
                    <div class="v-text-field__suffix">ETL</div>
                  </div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper">
                      <div class="v-messages__message">Amount to send for each request</div>
                    </transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
            <div class="v-input mt-2 v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <fieldset aria-hidden="true">
                    <legend style="width: 0px;"><span class="notranslate">​</span></legend>
                  </fieldset>
                  <div class="v-text-field__slot"><label for="input-28" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Interval Between Drips</label><input required="required" id="input-28" type="number">
                    <div class="v-text-field__suffix">hours</div>
                  </div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper">
                      <div class="v-messages__message">Minimum time between requests for each address</div>
                    </transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
            <div class="v-card__actions pr-0 pb-0">
              <div class="spacer"></div> <button type="submit" class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Update</span></button>
            </div>
          </form>
        </div>
      </div>
      <h4 class="error--text">Danger Zone</h4>
      <explorer-faucet-settings-danger-zone-stub faucetid="1"></explorer-faucet-settings-danger-zone-stub>
    </div>
  </div>
</div>
`;

exports[`ExplorerFaucetSettings.vue Should display faucet intro 1`] = `
<div class="container container--fluid">
  <div class="v-card v-sheet v-sheet--outlined theme--light">
    <create-explorer-faucet-modal-stub></create-explorer-faucet-modal-stub>
    <div class="v-card__text">
      <div class="row">
        <div align="center" class="col"><i aria-hidden="true" class="v-icon notranslate mdi mdi-faucet theme--light primary--text text--lighten-1" style="font-size: 200px; opacity: 0.25;"></i></div>
      </div>
      <div class="row">
        <div class="spacer"></div>
        <div class="text-body-1 col col-6">
          Setup your faucet in two easy steps:
          <ol>
            <li>Enter the drip amount, and the interval between requests.</li>
            <li>Top-up your assigned faucet address with test tokens.</li>
          </ol> <br>
          Having a faucet integrated in your explorer will make it easier for your users to
          request test tokens, and save you time by having one less tool to build &amp; maintain.
        </div>
        <div class="spacer"></div>
      </div>
    </div>
    <div class="v-card__actions mb-4">
      <div class="spacer"></div> <button type="button" class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Setup your Faucet</span></button>
      <div class="spacer"></div>
    </div>
  </div>
</div>
`;
